--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
 * {
   font-family: "Play", sans-serif;
+  color: #323330;
 }
 
-.cursor {
+.background-image {
+  background: url("./assets/images/photo-by-adrien-olichon.jpg") fixed center /
+    cover no-repeat;
+}
+
+.text-cursor {
   display: inline-block;
   width: 5px;
   height: 3.5rem;
   background-color: #323330;
   animation: blinkCursor 1s step-end infinite;
+}
+
+@media (max-width: 767.98px) {
+  .text-cursor {
+    width: 4px;
+    height: 2rem;
+  }
 }
 
 @keyframes blinkCursor {
@@ -16,8 +29,18 @@
   }
 }
 
-.background-image {
-  background-image: url("./assets/images/photo-by-adrien-olichon.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+.shadow-svg {
+  max-width: 12rem;
+  filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.5));
+}
+
+@media (max-width: 767.98px) {
+  .shadow-svg {
+    max-width: 10rem;
+  }
+}
+
+.custom-iframe {
+  width: 100%;
+  height: 45rem;
 }
