--- a/apps/to-do-app/style.css
+++ b/apps/to-do-app/style.css
@@ -1,42 +1,19 @@
 * {
   font-family: "Play", sans-serif;
+  color: #323330;
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  background-color: #f0db4f;
 }
 
 main {
   max-width: 100%;
   max-height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-section {
-  border: 1px solid black;
-  padding: 2rem 5rem;
-}
-
-h2 {
-  display: flex;
-  justify-content: center;
 }
 
 ul {
   display: contents;
-}
-
-.removeButton {
-  display: inline-block;
-  width: 10px;
-  height: 15px;
-  background: red;
 }
 
 .todoList li {
